Changing the title

--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
     <div id="intro2">
       <h1>RoughTraveller.com</h1>
       <h2>By</h2>
-      <h3>Nipam Patel</h3>
+      <h3>NIPAM PATEL</h3>
     </div>
   </div>
 </section>
