--- a/navbar.html
+++ b/navbar.html
@@ -15,8 +15,8 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="#mainintro">About</a></li>
+          <li><a href="#place1">Blog</a></li>
           <li><a href="#">contact</a></li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
  
 
   <!--Main Intro-->
-  <
+  
   <section id="mainintro">
     <p>I’m Nipam Patel.<br>
      I started roughtraveller.com as a Blog to write my travel stories. I like to visiting adventure locations and adventure sports. <br>
@@ -57,7 +57,7 @@
         <fieldset>
         <legend>Saputara Adventure Camp</legend>
          <p>
-          Saputara Adventure Camp – Gujarat Sapuatara is a small yet special destination in Gujarat. Sapuatara hill are situated in the dang district. Reckoned to be the best hill station in Gujarat, at Sapuatara lush green forest and waterfalls, beautiful sunrise and sunset. This hill station is situated at an elevation of 1080 meter. It’s located…
+          Saputara Adventure Camp – Gujarat Sapuatara is a small yet special destination in Gujarat. Sapuatara hill are situated in the dang district. Reckoned to be the best hill station in Gujarat, at Sapuatara lush green forest and waterfalls, beautiful sunrise and sunset. This hill station is situated at an elevation of 1080 meter. 
         </p>
         <button>Expolre More</button>
         </fieldset>
@@ -103,15 +103,32 @@
     </div>
   </section>
 
-  <!--Footer-->
+  <!--Feedback-->
 
-  <section>
-    <footer>
-      <div> Email:
-      <input type="text" name="email">
+
+  <section id="Feed">
+      <div class="feedbackForm">
+        <form >
+          <label for="name">NAME:</label>
+          <input type="text" name="name" id="name"> <br>
+          <label for="email">EMAIL:</label>
+          <input type="email" name="email" id="email"><br>
+          <label for="feedback">FEEDBACK:</label>
+          <textarea type="text" name="feedback" id="feedback"></textarea> <br>
+          <input type="submit" name="Submit">
+        </form>
       </div>
-    </footer>
+
+      <div class="future">
+        
+      </div>
+
+
+
+
   </section>
+
+
 
   
 
